[gd_scene load_steps=7 format=2]

[ext_resource path="res://Interactables/Furnitures/Base/Furniture.tscn" type="PackedScene" id=1]
[ext_resource path="res://Interactables/Furnitures/ElectricCommand/ElectricCommand.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interactables/Furnitures/ElectricCommand/electric_command.gd" type="Script" id=3]
[ext_resource path="res://Sound/SFX/electric_switch_toggled.wav" type="AudioStream" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.528476, 0.769906, 0.325535 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.724933, 0.889243, 0.325535 )

[node name="FurnitureElectricCommand" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.871325, -0.165325 )
shape = SubResource( 1 )

[node name="ElectricCommand" parent="Model" index="0" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="Interactable" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.871325, -0.165325 )
shape = SubResource( 2 )

[node name="ButtonSound" type="AudioStreamPlayer3D" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
stream = ExtResource( 4 )

[node name="ElectricityArrivalTimer" type="Timer" parent="." index="4"]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="ElectricityArrivalTimer" to="." method="_on_ElectricityArrivalTimer_timeout"]
